        (with some other changes).  You can set most objects as a clip on
        other objects.  This will use the alpha channel of the object as a
        clip on the object.  This is still buggy.
        * Software support for arbitrary maps.  So you can use any size map
        (not just 4 points) for maps.  Once again this is a little buggy.

2011-02-02  Carsten Haitzler (The Rasterman)

        * GL engine gets a speculative texture cache to shadow the
          normal image cache to avoid excess texture uploads when
          cycling images often. Should improve performance in some
          cases.

2011-02-12  Carsten Haitzler (The Rasterman)

        * Fix "rediculous scaling size" bug, where scaling images to
          sizes like 1 billion pixels high or wide caused evas to try
          allocate scaletables on the stack and the stack just couldn't
          handle it. Now it only allocates a table for the visible
          region which will always be sane, and even has insanity
          checks now. At worst you'll get an unrendered image if the
          values are silly and some slowness. No crashes.

2011-02-13  Brett Nash (nash@nash.id.au)
	
	* Fix crash when deleting proxies.  This _technically_ breaks
	  evas engines which realloc engine data when a border is set.
	  Practically no engines do this.  There is a comment there (and
	  if the engine does that border set won't work), in which case
	  a more complex work-around is possible.

2011-02-14  Tom Hacohen (TAsn)

	* Added a newline character mode API to textblock. This lets us set
	  the newline behavior to either normal (i.e only break a line, not
	  a paragraph) to "behave as a PS" mode. Default is the latter.
	  The former is the more correct approach but I guess everything else
	  is in e is not yet ready to use it. These API should help with the
	  transition.
	* A lot of textblock speed improvements and reduced memory footprint.
